--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -57,7 +57,7 @@
 
           <a href="{% url 'wisc_cc_survey' %}">
             <div class="card">
-              <img class="card-img-top" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
+              <img class="card-img-top" height="228" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
               <div class="card-body">
                 <h5 class="card-title">Cover crop survey </h5>
                 <p class="card-text">Click here if you've registered to participate in this year's survey.</p>
@@ -65,16 +65,14 @@
               </div>
             </div>
           </a>
-          <a href="{% url 'wisc_cc_register' %}">
+          <a href="{% url 'wisc_cc_register_1' %}">
             <div class="card">
               <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
                 alt="Lafayette county agronomist checking corn emergence and planting depth">
               <div class="card-body">
                 <h5 class="card-title">Interested in participating?</h5>
-                <p class="card-text">We welcome growers with all levels of experience and types of production
-                  systems. </p>
-                <p>You will be prompted to sign in or create an account with us to complete your registration.</p>
-                <a href="{% url 'wisc_cc_register' %}" class="btn btn-primary">Click here to register</a>
+
+                <a href="{% url 'wisc_cc_register_1' %}" class="btn btn-primary">Register here!</a>
               </div>
             </div>
           </a>
