--- a/wisccc/templates/wisccc/wisc_cc_signup.html
+++ b/wisccc/templates/wisccc/wisc_cc_signup.html
@@ -18,7 +18,7 @@
                 <!-- <a class="nav-link" href="{% url 'wisc_cc_home' %}">
                     <h3 class="card-title">Wisconsin Cover Crop Citizen Science Network</h3>
                 </a> -->
-                <h5>Register</h5>
+                <h5>Sign up</h5>
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
 
