wrong heading on registration

--- a/wisccc/templates/wisccc/wisc_cc_register_1.html
+++ b/wisccc/templates/wisccc/wisc_cc_register_1.html
@@ -16,7 +16,7 @@
         <div class="card">
             <div class="card-body">
 
-                <h5>Register for 2024 Cover Crop Survey</h5>
+                <h5>How it Works</h5>
                 <p>
                     We welcome Wisconsin growers with all levels of experience and production systems.
                     As a participant you fill out a survey on your cover cropping experiences,
