adding new logo as a footer to template

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -102,6 +102,10 @@
   updateActive()
 
 </script>
-
+<h1 class="text-center logo my-4">
+  <img width="700" height="230" src="{% static 'img/logo_wisc_cc_affiliations_2.png' %}" />
+</h1>
 {% endblock %}
-{% block title %}Welcome to Wisconsin Growers Citizen Science Network {% endblock title %}
+{% block title %}
+Welcome to Wisconsin Growers Citizen Science Network
+{% endblock title %}
