--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -56,18 +56,18 @@
         </div>
         <div class="card-group">
 
-          <a href="{% url 'wisc_cc_survey' %}">
-            <div class="card">
-              <img class="card-img-top" height="228" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
-              <div class="card-body">
-                <h5 class="card-title">Cover crop survey </h5>
-                <p class="card-text">Survey registration for the 2024 survey coming soon!.</p>
-                <!-- <p class="card-text">Click here if you've registered to participate in this year's survey.</p> -->
-                <!-- <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a> -->
-                <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a>
-              </div>
+          <!-- <a href="{% url 'wisc_cc_survey' %}"> -->
+          <div class="card">
+            <img class="card-img-top" height="228" src="{% static 'img/oats_berseem_481x425.jpg' %}" alt="Oats photo">
+            <div class="card-body">
+              <h5 class="card-title">Cover crop survey </h5>
+              <p class="card-text">Survey for the 2024 season will open this fall.</p>
+              <!-- <p class="card-text">Click here if you've registered to participate in this year's survey.</p> -->
+              <!-- <a href="{% url 'wisc_cc_survey' %}" class="btn btn-primary">Go to survey</a> -->
+              <a class="btn btn-primary">Go to survey</a>
             </div>
-          </a>
+          </div>
+          <!-- </a> -->
           <a href="{% url 'wisc_cc_register_1' %}">
             <div class="card">
               <img class="card-img-top" src="{% static 'img/checking_corn.jpg' %}"
