dropping previous participation; restructuring other question to be do you need assistance

--- a/wisccc/templates/wisccc/includes/form_registration_full.html
+++ b/wisccc/templates/wisccc/includes/form_registration_full.html
@@ -7,11 +7,6 @@
     </div>
 </div>
 <div class="form-row">
-    <div class="form-group col-md-6 mb-0">
-        {{ registration_form.prefer_paper_survey|as_crispy_field }}
-    </div>
-</div>
-<div class="form-row">
     <div class="form-group col-md-10 mb-0">
         {{ registration_form.do_you_have_a_biomas_kit|as_crispy_field }}
     </div>
@@ -30,7 +25,7 @@
 
 <div class="form-row">
     <div class="form-group col-md-10 mb-0">
-        {{ registration_form.previous_participation|as_crispy_field }}
+        {{ registration_form.do_you_need_assistance|as_crispy_field }}
     </div>
 </div>
 <div class="form-row">
