removed count of registered; made button link back to registration table

--- a/wisccc/templates/wisccc/registration_table.html
+++ b/wisccc/templates/wisccc/registration_table.html
@@ -23,7 +23,7 @@
         <h3 class="card-title">Registered for Survey</h3>
         <h7 class="card-title">
 
-          <span style="float: right">{{ total_regs }} registered</span>
+          <!-- <span style="float: right">{{ total_regs }} registered</span> -->
         </h7>
         <div class="col-md-12">
           {% render_table table %}
