--- a/wisccc/templates/wisccc/wisc_cc_registration_review.html
+++ b/wisccc/templates/wisccc/wisc_cc_registration_review.html
@@ -29,7 +29,8 @@
 
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
-  <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="warn btn btn-secondary">Back to survey home
+  <a href="{% url 'registration_table' %}"><button type="button" class="warn btn btn-secondary">Back to registration
+      table
       page</button></a>
 
 
