--- a/wisccc/templates/wisccc/registration_table.html
+++ b/wisccc/templates/wisccc/registration_table.html
@@ -22,8 +22,7 @@
       <div class="card-body">
         <h3 class="card-title">Registered for Survey</h3>
         <h7 class="card-title">
-
-          <!-- <span style="float: right">{{ total_regs }} registered</span> -->
+          <span><a href="{% url 'download_registrants' %}">Download registrants</a></span>
         </h7>
         <div class="col-md-12">
           {% render_table table %}
