Reworked forms to have (2023) survey fit into new structure!

--- a/wisccc/templates/wisccc/base_survey.html
+++ b/wisccc/templates/wisccc/base_survey.html
@@ -52,7 +52,7 @@
         </script>
 
         {% block form %}
-        {% endblock %}
+        {% endblock form %}
 
       </div>
       <!-- <div class="card-footer text-muted text-center" style="font-size: small;">
