--- a/wisccc/templates/wisccc/survey_review.html
+++ b/wisccc/templates/wisccc/survey_review.html
@@ -9,7 +9,11 @@
 {% block form %}
 
 <head>
-  {{ form.media }}
+  {{ farmer_form.media }}
+  {{ survey_farm_full_form.media }}
+  {{ survey_field_full_form.media }}
+  {{ survey_photo_form.media }}
+  {{ field_farm_full_form.media }}
 </head>
 
 
@@ -24,7 +28,11 @@
 
   {% include 'wisccc/includes/form_farmer.html' %}
 
-  {% include 'wisccc/includes/full_form.html' %}
+  {% include 'wisccc/includes/form_surveyfarm_full.html' %}
+
+  {% include 'wisccc/includes/form_surveyfield_full.html' %}
+
+  {% include 'wisccc/includes/form_fieldfarm_full.html' %}
 
   <button type="submit" class="noprompt-required btn btn-primary">Submit</button>
   <a href="{% url 'wisc_cc_survey' %}"><button type="button" class="warn btn btn-secondary">Back to survey home
