--- a/wisccc/templates/wisccc/includes/form_surveyfarm_full.html
+++ b/wisccc/templates/wisccc/includes/form_surveyfarm_full.html
@@ -153,4 +153,16 @@
     </div>
 </div>
 
+<hr>
+<div>
+    <div class="form-row">
+        <div class="form-group col-md-12 mb-0">
+            {{ survey_farm_full_form.notes_admin|as_crispy_field }}
+        </div>
+
+        <div class="form-group col-md-12 mb-0">
+            {{ survey_farm_full_form.confirmed_accurate|as_crispy_field }}
+        </div>
+    </div>
+</div>
 {{ survey_farm_full_form.errors}}
