adding in ID to visible in tooltips and rollovers: check to verify that these ids are not duplicated at the beginning of the 2023 survey

--- a/wisccc/templates/wisccc/wisc_cc_graph.html
+++ b/wisccc/templates/wisccc/wisc_cc_graph.html
@@ -682,7 +682,7 @@
 
             var tool_tip_string =
                 //"Total precip: " + feature.properties.total_precip + " in" + "<br/>" +
-                // "Survey id: " + feature.id + "<br/>" +
+                "ID: " + feature.id + "<br/>" +
                 feature.properties.county_single + " County" + "<br/>" +
                 feature.properties.cc_species_raw + "<br/>"
             if (feature.properties.cc_planting_rate == '.' | feature.properties.cc_planting_rate == null) {
