--- a/wisccc/templates/wisccc/wisc_cc_map_toggle.html
+++ b/wisccc/templates/wisccc/wisc_cc_map_toggle.html
@@ -540,7 +540,7 @@
                 image_2 = "<dt>" + feature.properties.caption_photo_2 + "</dt> <dd>" + '<img src="' + feature.properties.image_2_url + '" width="250" height="250">' + "</dd>"
             }
             var popupContent = "<dl>" +
-                // "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
+                "<dt>ID</dt> <dd>" + feature.id + "</dd>" +
                 "<dt>Cover crops</dt> <dd>" + feature.properties.cc_species_raw + "</dd>" +
                 "<dt>Seeding rate</dt> <dd>" + planting_rate + "</dd>" +
                 "<dt>Seeding method</dt> <dd>" + feature.properties.cc_seeding_method + "</dd>" +
