finished first draft of survey 2024!

--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
@@ -103,7 +103,7 @@
     </div>
 </div>
 <hr>
-
+{{ form_surveyfield_section_3.errors }}
 <script>
     $(function () {
         $("#id_cover_crop_planting_date").datepicker({
