--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -29,16 +29,25 @@
 
         {% else %}
 
-        <p>Thank you for doing this survey. We're excited for this fourth season of our cover crop citizen science
-          project, and to be able to add a spring biomass element. You are part of a state-wide collaborative effort to
-          develop sound cover crop strategies for Wisconsin. You're also helping improve tools like SnapPlus and
-          developing better cost-effective strategies for reducing erosion and conserving nutrients.</p>
+        <p>
+          Welcome to the fifth season of our cover crop citizen science project.
+          You are part of a state-wide collaborative effort to build practical knowledge about cover cropping in
+          Wisconsin.
+          You're also helping improve tools like SnapPlus and developing better
+          cost-effective strategies for reducing erosion and conserving nutrients.
+        </p>
 
-        <p>We will be in touch to be sure the biomass sampling is going ok, and to share other project info. Also, check
-          out the map and graph of the data we've collected so far! Please contact
-          Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a> with any questions</p>
+        <p>
+          We will be in touch to be sure the biomass sampling is going ok, and to share other project info. Also, check
+          out the <a href="{% wisc_cc_graph %}">map and graph</a> of the data we've collected so far!
+        </p>
+        <p>Please contact Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a>
+          or Dan Marzu <a href="mailto:dan.marzu@wisc.edu">(dan.marzu@wisc.edu)</a> with any questions</p>
 
-        <p>Dan Smith, Mrill Ingram, Ricardo Costa Silva, Gregg Sanford.</p>
+        <p>
+          The survey has seven sections, some of them very short.
+          Please submit each section before leaving so you don’t lose the information you’ve put in.
+        </p>
 
 
         {% endif %}
@@ -50,19 +59,19 @@
             {% if completed_1 %}
             <a href="{% url 'wisc_cc_survey1' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              I. General Info - Completed! Click to edit your response.
+              I. General info - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey1' %}"
               class="list-group-item list-group-item-action list-group-item-warning">
-              I. General Info
+              I. General info
             </a>
             {% endif %}
 
             {% if completed_2 %}
             <a href="{% url 'wisc_cc_survey2' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              II. Cover cropping goals & support - Completed! Click to edit your response.
+              II. Cover cropping goals & support - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey2' %}"
@@ -74,12 +83,12 @@
             {% if completed_3 %}
             <a href="{% url 'wisc_cc_survey3' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              III. "Research Field" Cover Crop Information - Completed! Click to edit your response.
+              III. Research Field: Crop rotation and planting rates - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey3' %}"
               class="list-group-item list-group-item-action list-group-item-warning">
-              III. "Research Field" Cover Crop Information
+              III. Research Field: Crop rotation and planting rates
             </a>
             {% endif %}
 
@@ -87,7 +96,7 @@
             {% if completed_4 %}
             <a href="{% url 'wisc_cc_survey4' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              IV. Research Field: Planting dates & timing - Completed! Click to edit your response.
+              IV. Research Field: Planting dates & timing - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey4' %}"
@@ -99,7 +108,7 @@
             {% if completed_5 %}
             <a href="{% url 'wisc_cc_survey5' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              V. Research Field: Manure, tillage, soil conditions - Completed! Click to edit your response.
+              V. Research Field: Manure, tillage, soil conditions - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey5' %}"
@@ -111,7 +120,7 @@
             {% if completed_6 %}
             <a href="{% url 'wisc_cc_survey6' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              VI. Research Field: Cover crop seeding & cost - Completed! Click to edit your response.
+              VI. Research Field: Cover crop seeding & cost - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey6' %}"
@@ -122,7 +131,7 @@
             {% if completed_7 %}
             <a href="{% url 'wisc_cc_survey7' %}"
               class="list-group-item list-group-item-action list-group-item-success">
-              VII. Final thoughts - Completed! Click to edit your response.
+              VII. Final thoughts - completed! Click to edit your response.
             </a>
             {% else %}
             <a href="{% url 'wisc_cc_survey7' %}"
