bringing survey header link back

--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -29,8 +29,7 @@
         <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
       </li>
       <li class="nav-item" id="nav-survey">
-        <!-- <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a> -->
-        <a class="nav-link" href="">Survey</a>
+        <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
       </li>
       <li class="nav-item" id="nav-about">
         <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
