forgot url tag for link

--- a/wisccc/templates/wisccc/wisc_cc_survey.html
+++ b/wisccc/templates/wisccc/wisc_cc_survey.html
@@ -39,7 +39,7 @@
 
         <p>
           We will be in touch to be sure the biomass sampling is going ok, and to share other project info. Also, check
-          out the <a href="{% wisc_cc_graph %}">map and graph</a> of the data we've collected so far!
+          out the <a href="{% url 'wisc_cc_graph' %}">map and graph</a> of the data we've collected so far!
         </p>
         <p>Please contact Mrill Ingram <a href="mailto:mingram@wisc.edu">(mingram@wisc.edu)</a>
           or Dan Marzu <a href="mailto:dan.marzu@wisc.edu">(dan.marzu@wisc.edu)</a> with any questions</p>
