--- a/wisccc/templates/wisccc/survey_section_2_goals_support.html
+++ b/wisccc/templates/wisccc/survey_section_2_goals_support.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 2{% endblock %}
+{% block title %}Goals and support{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
