--- a/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
+++ b/wisccc/templates/wisccc/survey_section_4_field_planting_dates_timing.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section IV{% endblock %}
+{% block title %}Planting dates and timing{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
