--- a/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
+++ b/wisccc/templates/wisccc/survey_section_5_field_tillage_manure_soil.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 5{% endblock %}
+{% block title %}Manure, tillage, soil{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
