--- a/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
+++ b/wisccc/templates/wisccc/survey_section_7_final_thoughts.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 7{% endblock %}
+{% block title %}Final thoughts{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
