--- a/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
+++ b/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 3{% endblock %}
+{% block title %}Crop rotation and planting rates{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
