--- a/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
+++ b/wisccc/templates/wisccc/survey_section_6_field_seeding_cost.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 6{% endblock %}
+{% block title %}Cover crop seeding and cost{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
