tidying and cleaning, removed all references to Survey from forms and views

--- a/wisccc/templates/wisccc/survey_section_3a_select_field.html
+++ b/wisccc/templates/wisccc/survey_section_3a_select_field.html
@@ -1,6 +1,6 @@
 {% extends 'wisccc/base_survey.html' %}
 
-{% block title %}Section 3{% endblock %}
+{% block title %}Field information{% endblock %}
 {% load static %}
 {% load crispy_forms_tags %}
 
