renumbered and some reformatting

--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
@@ -2,6 +2,10 @@
 
 
 
+<h4>Crop rotation in this field 2022-2024</h4>
+<p>
+    If you planted more than one species as a cover crop select “multispp. mix of 2 or more” from the drop down.
+</p>
 
 
 <div class="form-row">
@@ -28,13 +32,13 @@
         {{ form_surveyfield_section_3.crop_rotation_2023_cover_crop_species|as_crispy_field }}
     </div>
 </div>
-<div class="form-row">
-    <div class="form-group col-md-10 mb-0">
-        {{ form_surveyfield_section_3.crop_rotation|as_crispy_field }}
-    </div>
-</div>
-
-<p>Please select any of the following that were planted as a cover crop in this field *this year*.</p>
+<h4>Planting Rate 2024</h4>
+<p>
+    18. What was your cover crop planting rate for this field?
+    If you planted a multispecies mix of two or more types please tell us the rate for each type of cover crop in the
+    mix (up to 5 species) to the best of your ability.
+    You can add more details in the text box below.
+</p>
 <div class="form-row">
     <div class="form-group col-md-4 mb-0">
         {{ form_surveyfield_section_3.cover_crop_species_1|as_crispy_field }}
@@ -91,17 +95,12 @@
     </div>
 </div>
 <hr>
-<p><b>Mrill, do we keep these?*</b></p>
 <div class="form-row">
-    <div class="form-group col-md-12 mb-0">
-        {{ form_surveyfield_section_3.cover_crop_species_and_rate_write_in|as_crispy_field }}
+    <div class="form-group col-md-10 mb-0">
+        {{ form_surveyfield_section_3.crop_rotation|as_crispy_field }}
     </div>
 </div>
-<div class="form-row">
-    <div class="form-group col-md-12 mb-0">
-        {{ form_surveyfield_section_3.cover_crop_multispecies_mix_write_in|as_crispy_field }}
-    </div>
-</div>
+
 <hr>
 {{ form_surveyfield_section_3.errors }}
 <script>
