--- a/templates/home.html
+++ b/templates/home.html
@@ -104,8 +104,9 @@
           <li class="list-group-item">Green CovR: portal for submitting cover crop photos</li>
         </a>
         <a href="{% url 'wisc_cc_home' %}">
-          <li class="list-group-item">Wisconsin Growers Citizen Science Network, a project of the Soil
-            Health Agricultural Research & Education (SHARE) collaborative</li>
+          <li class="list-group-item">
+            Wisconsin Cover Crop Data Network, Soil Health Alliance for Research and Education (SHARE)
+          </li>
         </a>
       </ul>
 
@@ -117,8 +118,8 @@
       <h1 style="font-size:50px">Projects</h1>
       <h4><a href="{% url 'soils_in_depth' %}">Exploring soils in depth</a>: easily view SSURGO data properties</h4>
       <h4><a href="{% url 'kanopy_home' %}">Green CovR</a>: portal for submitting cover crop photos</h4>
-      <h4><a href="{% url 'wisc_cc_home' %}">Wisconsin Growers Citizen Science Network</a>: , a project of the Soil
-        Health Agricultural Research & Education (SHARE) collaborative</h4>
+      <h4><a href="{% url 'wisc_cc_home' %}">Wisconsin Cover Crop Data Network, Soil Health Alliance for Research and
+          Education (SHARE)</h4>
     </div>
   </div>
   <script src="{% static 'js/popper.min.js' %}"></script>
