face of researcher signup and view and update mostly there; yet to do the actual authorize

--- a/wisccc/templates/wisccc/wisc_cc_researcher.html
+++ b/wisccc/templates/wisccc/wisc_cc_researcher.html
@@ -29,7 +29,8 @@
                                     This dataset is what is used in the graph and map display.
                                     It will not contain much qualitative data.
                                 </p>
-                                <a href="{% url 'wisccc_download_data' 2 %}" class="btn btn-primary">Download</a>
+                                <a href="{% url 'wisccc_researcher_download_data' %}"
+                                    class="btn btn-primary">Download</a>
                             </div>
 
                         </div>
