adding edits and tweaks as per mrills comments

--- a/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
+++ b/wisccc/templates/wisccc/survey_section_3_field_rotation_rates.html
@@ -13,6 +13,12 @@
 </head>
 
 <h3 class="card-title">III. Research Field: Crop rotation and planting rates</h3>
+<p>
+  In the following section we ask you about cover cropping in one field or
+  set of fields (can be one acre or 1,000) from which you'll take your
+  samples to be sent into the lab for biomass, nutrient, and forage analysis.
+  <em><span style="color:#DC3545;">Provide answers only for that field.</span></em>
+</p>
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
 
