additional fixes to survey formatting and wording and numbering

--- a/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
+++ b/wisccc/templates/wisccc/includes/survey_2024/form_section_3_rotation_rates_surveyfield.html
@@ -4,7 +4,8 @@
 
 <h4>Crop rotation in this field 2022-2024</h4>
 <p>
-    If you planted more than one species as a cover crop select “multispp. mix of 2 or more” from the drop down.
+    If you planted more than one species as a cover crop select “multispecies mix of 2 or more”
+    from the drop down.
 </p>
 
 
